--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,36 @@
 <div class="bg-gray-800 w-full min-h-screen flex flex-col flex-wrap lg:flex-row">
     <div class="w-full min-h-screen lg:w-1/2 text-white flex flex-col items-center space-y-12">
-        <h6 class="text-green-400 p-2 text-lg ">Environment</h6>
-        <ngx-gauge class="block" [type]="'semi'" [thresholds]="thresholdConfig" [value]="gaugeValue"
+        <h6 class="text-green-400 p-2 text-lg ">Environnement</h6>
+        <ngx-gauge class="block" [type]="'semi'" [thresholds]="tempThresholdConfig" [value]="shownData.temp"
             [label]="gaugeLabel" [backgroundColor]="'white'" [thick]="20" [foregroundColor]="'white'"
             [append]="gaugeAppendText" [markers]="markers" [min]="0" [max]="50" [size]="300">
         </ngx-gauge>
-        <ngx-gauge class="block" [type]="'semi'" [thresholds]="thresholdConfig" [value]="80"
+        <ngx-gauge class="block" [type]="'semi'" [thresholds]="humThresholdConfig" [value]="shownData.hum"
             [label]="'Humidité'" [backgroundColor]="'white'" [thick]="20" [foregroundColor]="'white'"
             [append]="'g.m-3'" [markers]="markers2" [min]="0" [max]="100" [size]="300">
         </ngx-gauge>
     </div>
-    <div class="w-full min-h-screen border-t-2 border-black lg:border-t-0 lg:border-l-2 lg:w-1/2">
-        <h6 class="text-green-400 p-2 text-lg">Statisitcs</h6>
+    <div class="w-full min-h-screen lg:w-1/2 text-white flex flex-col items-center space-y-12">
+        <h6 class="text-green-400 p-2 text-lg">Statistiques</h6>
+        <ngx-charts-line-chart
+          [view]="view"
+          [animations]="true"
+          [scheme]="colorScheme"
+          [results]="lineData"
+          [gradient]="gradient"
+          [xAxis]="true"
+          [yAxis]="true"
+          [legend]="showLegend"
+          [showXAxisLabel]="true"
+          [showYAxisLabel]="true"
+          xAxisLabel="Température"
+          yAxisLabel="Humidité"
+          (select)="onSelect($event)"
+          [timeline]="true"
+          [roundDomains]="true"
+          [autoScale]="true"
+        >
+        </ngx-charts-line-chart>
+
     </div>
 </div>
