--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,8 +24,8 @@
           [legend]="showLegend"
           [showXAxisLabel]="true"
           [showYAxisLabel]="true"
-          xAxisLabel="Température"
-          yAxisLabel="Humidité"
+          xAxisLabel="Température, Humidité"
+          yAxisLabel="°C, g.m-3"
           (select)="onSelect($event)"
           [timeline]="true"
           [roundDomains]="true"
