--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,6 @@
     <div class="w-full min-h-screen md:w-2/3 text-white flex flex-col items-center space-y-12 border-t-2 border-white md:border-t-0 md:border-l-2">
         <h6 class="text-green-400 p-2 text-lg">Statistiques</h6>
         <ngx-charts-line-chart
-
           [view]="view"
           [animations]="true"
           [scheme]="colorScheme"
@@ -33,4 +32,56 @@
           style="fill: #fff;">
         </ngx-charts-line-chart>
     </div>
+      <div class="container block mx-auto px-4 sm:px-8">
+        <div class="py-8">
+          <div>
+            <h2 class="text-2xl font-semibold leading-tight text-white">Historique</h2>
+          </div>
+          <div class="-mx-4 sm:-mx-8 px-4 sm:px-8 py-4 overflow-x-auto">
+            <div
+              class="inline-block min-w-full shadow-md rounded-lg overflow-hidden"
+            >
+              <table class="min-w-full leading-normal">
+                <thead>
+                <tr>
+                  <th
+                    class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
+                  >
+                    ID
+                  </th>
+                  <th
+                    class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
+                  >
+                    Température
+                  </th>
+                  <th
+                    class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
+                  >
+                    Humidité
+                  </th>
+                </tr>
+                <tbody>
+                <tr *ngFor="let e of history">
+                  <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                    <p class="text-gray-900 whitespace-no-wrap">{{e[0]}}</p>
+                  </td>
+                  <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                    <div class="flex">
+                      <div class="ml-3">
+                        <p class="text-gray-900 whitespace-no-wrap">
+                          {{e[1]?.temp_moy}}
+                        </p>
+                      </div>
+                    </div>
+                  </td>
+                  <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                    <p class="text-gray-900 whitespace-no-wrap">{{e[1]?.hum_moy}}</p>
+                  </td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
 </div>
