--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,20 +62,20 @@
                 </tr>
                 <tbody>
                 <tr *ngFor="let e of history">
-                  <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
-                    <p class="text-gray-900 whitespace-no-wrap">{{e[0]}}</p>
+                  <td class="px-5 py-5 border-b border-gray-200 text-sm">
+                    <p class="text-white whitespace-no-wrap">{{e[0]}}</p>
                   </td>
-                  <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
+                  <td class="px-5 py-5 border-b border-gray-200 text-sm">
                     <div class="flex">
                       <div class="ml-3">
-                        <p class="text-gray-900 whitespace-no-wrap">
+                        <p class="text-white whitespace-no-wrap">
                           {{e[1]?.temp_moy}}
                         </p>
                       </div>
                     </div>
                   </td>
-                  <td class="px-5 py-5 border-b border-gray-200 bg-white text-sm">
-                    <p class="text-gray-900 whitespace-no-wrap">{{e[1]?.hum_moy}}</p>
+                  <td class="px-5 py-5 border-b border-gray-200 text-sm">
+                    <p class="text-white whitespace-no-wrap">{{e[1]?.hum_moy}}</p>
                   </td>
                 </tr>
                 </tbody>
