--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,87 +1,3 @@
-<div class="bg-gray-800 w-full min-h-screen flex flex-col flex-wrap lg:flex-row overflow-hidden">
-    <div class="w-full min-h-screen md:w-1/3 text-white flex flex-col items-center space-y-12">
-        <h6 class="text-green-400 p-2 text-lg ">Environnement</h6>
-        <ngx-gauge class="block" [type]="'semi'" [thresholds]="tempThresholdConfig" [value]="shownData.temp"
-            [label]="gaugeLabel" [backgroundColor]="'white'" [thick]="20" [foregroundColor]="'white'"
-            [append]="gaugeAppendText" [markers]="markers" [min]="0" [max]="50" [size]="300">
-        </ngx-gauge>
-        <ngx-gauge class="block" [type]="'semi'" [thresholds]="humThresholdConfig" [value]="shownData.hum"
-            [label]="'Humidité'" [backgroundColor]="'white'" [thick]="20" [foregroundColor]="'white'"
-            [append]="'g.m-3'" [markers]="markers2" [min]="0" [max]="100" [size]="300">
-        </ngx-gauge>
-    </div>
-    <div class="w-full min-h-screen md:w-2/3 text-white flex flex-col items-center space-y-12 border-t-2 border-white md:border-t-0 md:border-l-2">
-        <h6 class="text-green-400 p-2 text-lg">Statistiques</h6>
-        <ngx-charts-line-chart
-          [view]="view"
-          [animations]="true"
-          [scheme]="colorScheme"
-          [results]="lineData"
-          [gradient]="gradient"
-          [xAxis]="true"
-          [yAxis]="true"
-          [legend]="showLegend"
-          [showXAxisLabel]="true"
-          [showYAxisLabel]="true"
-          xAxisLabel="Numéro d'enregistrement"
-          yAxisLabel="Valeur"
-          (select)="onSelect($event)"
-          [timeline]="true"
-          [roundDomains]="true"
-          [autoScale]="true"
-          style="fill: #fff;">
-        </ngx-charts-line-chart>
-    </div>
-      <div class="container block mx-auto px-4 sm:px-8">
-        <div class="py-8">
-          <div>
-            <h2 class="text-2xl font-semibold leading-tight text-white">Historique</h2>
-          </div>
-          <div class="-mx-4 sm:-mx-8 px-4 sm:px-8 py-4 overflow-x-auto">
-            <div
-              class="inline-block min-w-full shadow-md rounded-lg overflow-hidden"
-            >
-              <table class="min-w-full leading-normal">
-                <thead>
-                <tr>
-                  <th
-                    class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
-                  >
-                    ID
-                  </th>
-                  <th
-                    class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
-                  >
-                    Température
-                  </th>
-                  <th
-                    class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
-                  >
-                    Humidité
-                  </th>
-                </tr>
-                <tbody>
-                <tr *ngFor="let e of history">
-                  <td class="px-5 py-5 border-b border-gray-200 text-sm">
-                    <p class="text-white whitespace-no-wrap">{{e[0]}}</p>
-                  </td>
-                  <td class="px-5 py-5 border-b border-gray-200 text-sm">
-                    <div class="flex">
-                      <div class="ml-3">
-                        <p class="text-white whitespace-no-wrap">
-                          {{e[1]?.temp_moy}}
-                        </p>
-                      </div>
-                    </div>
-                  </td>
-                  <td class="px-5 py-5 border-b border-gray-200 text-sm">
-                    <p class="text-white whitespace-no-wrap">{{e[1]?.hum_moy}}</p>
-                  </td>
-                </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-      </div>
-</div>
+  <router-outlet></router-outlet>
+
+
