--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
+<button class="fixed right-4 top-1 bg-white px-4 rounded shadow-2xl" [routerLink]="'history'">History</button>
 <div class="bg-gray-800 w-full min-h-screen flex flex-col flex-wrap lg:flex-row overflow-hidden">
-
 <div class="w-full min-h-screen md:w-1/3 text-white flex flex-col items-center space-y-12">
   <h6 class="text-green-400 p-2 text-lg ">Environnement</h6>
   <ngx-gauge class="block" [type]="'semi'" [thresholds]="tempThresholdConfig" [value]="shownData.temp"
