--- a/src/app/history-table/history-table.component.html
+++ b/src/app/history-table/history-table.component.html
@@ -15,7 +15,7 @@
             <th
               class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
             >
-              ID
+              Temps
             </th>
             <th
               class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-left text-xs font-semibold text-gray-700 uppercase tracking-wider"
@@ -31,7 +31,7 @@
           <tbody>
           <tr *ngFor="let e of history">
             <td class="px-5 py-5 border-b border-gray-200 text-sm">
-              <p class="text-white whitespace-no-wrap">{{e[0]}}</p>
+              <p class="text-white whitespace-no-wrap">{{e[0] | date: 'mediumTime'}}</p>
             </td>
             <td class="px-5 py-5 border-b border-gray-200 text-sm">
               <div class="flex">
